/*
 * Copyright (c) 2016 Farooq Khan
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
 * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
plugins {
    id 'java'
    id 'jacoco'
    id 'com.github.nbaztec.coveralls-jacoco' version '1.2.20'
    id 'maven-publish'
    id 'signing'
    id 'eclipse'
    id 'idea'
}

description = 'A pure java JSON based database.'
group = 'io.jsondb'
version = getVersionName()

ext {
    println "Build Version: $version"

    slf4jVersion = '1.7.36'
    jacksonVersion = '2.18.8'
    guavaVersion = '33.6.0-jre'
    beanutilsVersion = '1.11.0'
    jxpathVersion = '1.4.0'
    reflectionsVersion = '0.10.2'
    junitVersion = '4.13.2'
    hamcrestVersion = '2.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
}

configurations.configureEach {
    resolutionStrategy {
        eachDependency { details ->
            if (details.requested.group == 'commons-collections' && details.requested.name == 'commons-collections') {
                details.useVersion '3.2.2'
                details.because 'Pin commons-collections to latest 3.x with security fixes'
            }
        }
    }
}

dependencies {
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"

    implementation platform("com.fasterxml.jackson:jackson-bom:${jacksonVersion}")
    implementation 'com.fasterxml.jackson.core:jackson-databind',
            'com.fasterxml.jackson.module:jackson-module-parameter-names',
            'com.fasterxml.jackson.datatype:jackson-datatype-jdk8',
            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    implementation "org.reflections:reflections:${reflectionsVersion}",
            "commons-jxpath:commons-jxpath:${jxpathVersion}",
            "com.google.guava:guava:${guavaVersion}",
            "commons-beanutils:commons-beanutils:${beanutilsVersion}"

    testImplementation "junit:junit:${junitVersion}",
            "org.hamcrest:hamcrest-library:${hamcrestVersion}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
}

tasks.test {
    useJUnit()
    jvmArgs(
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
    )
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

eclipse {
    project {
        name = "${project.name}"
    }
}

eclipseJdt {
    inputFile = file("${rootDir}/buildsupport/eclipsesupport/settings/org.eclipse.jdt.core.prefs")
    doLast {
        copy {
            from "${rootDir}/buildsupport/eclipsesupport/settings/org.eclipse.jdt.ui.prefs"
            into "${projectDir}/.settings"
            fileMode 0644
        }
    }
}

cleanEclipseJdt {
    doFirst {
        delete "${projectDir}/.settings"
    }
}
tasks.eclipse.dependsOn(cleanEclipse)

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'jsondb-core'
                packaging = 'jar'
                description = 'A pure java JSON based database.'
                url = 'http://www.jsondb.io'

                scm {
                    connection = 'scm:git:https://github.com/Jsondb/jsondb-core.git'
                    developerConnection = 'scm:git:https://github.com/Jsondb/jsondb-core.git'
                    url = 'scm:git:https://github.com/Jsondb/jsondb-core.git'
                }

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }

                developers {
                    developer {
                        id = 'FarooqKhan'
                        name = 'Farooq Khan'
                        email = 'FarooqKhan@users.noreply.github.com'
                    }
                }
            }
        }
    }
    repositories {
        maven {
            name = 'OSSRH'
            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            credentials {
                username = OSSRH_USERNAME
                password = OSSRH_PASSWORD
            }
        }
    }
}

signing {
    required { gradle.taskGraph.hasTask('publish') }
    sign publishing.publications.mavenJava
}

/*
 * Gets the version name from the latest Git tag
 */
def getVersionName() {
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'describe', '--tags'
        standardOutput = stdout
    }
    def versionString = stdout.toString().replaceFirst('-', '.')
    versionString = versionString.substring(0, versionString.indexOf('-'))

    return versionString + '-j17'
}
